--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.2.0",
     "gulp-task-listing": "^1.0.1",
+    "gulp-typescript": "^2.12.0",
     "gulp-uglify": "^1.5.2",
     "gulp-util": "^3.0.7",
     "jshint": "^2.9.1",
