--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/jarasek26/gulp_test#readme",
   "devDependencies": {
+    "angular": "^1.5.0",
+    "angular-mocks": "^1.5.0",
     "body-parser": "^1.15.0",
     "cool-reporter": "^0.1.51",
     "express": "^4.13.4",
@@ -31,7 +33,14 @@
     "gulp-typescript": "^2.12.0",
     "gulp-uglify": "^1.5.2",
     "gulp-util": "^3.0.7",
+    "jasmine-core": "^2.4.1",
     "jshint": "^2.9.1",
-    "mysql": "^2.10.2"
+    "karma": "^0.13.21",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-coverage": "^0.5.3",
+    "karma-jasmine": "^0.3.7",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "mysql": "^2.10.2",
+    "phantomjs-prebuilt": "^2.1.4"
   }
 }
